unpackaged/main/default/objects/ETI_Lane_Details__c/ETI_Lane_Details__c.object-meta.xml
<CustomObject>
    <label>Lane Details</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Lane Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lane Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>