unpackaged/main/default/objects/ETI_Lane_Details__c/fields/Available_Slots__c.field-meta.xml
<CustomField>
    <fullName>Available_Slots__c</fullName>
    <label>Available Slots</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Slot_Frequency__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>07:00</fullName>
            </value>
            <value>
                <fullName>07:05</fullName>
            </value>
            <value>
                <fullName>07:10</fullName>
            </value>
            <value>
                <fullName>07:15</fullName>
            </value>
            <value>
                <fullName>07:20</fullName>
            </value>
            <value>
                <fullName>07:25</fullName>
            </value>
            <value>
                <fullName>07:30</fullName>
            </value>
            <value>
                <fullName>07:35</fullName>
            </value>
            <value>
                <fullName>07:40</fullName>
            </value>
            <value>
                <fullName>07:45</fullName>
            </value>
            <value>
                <fullName>07:50</fullName>
            </value>
            <value>
                <fullName>07:55</fullName>
            </value>
            <value>
                <fullName>08:00</fullName>
            </value>
            <value>
                <fullName>08:05</fullName>
            </value>
            <value>
                <fullName>08:10</fullName>
            </value>
            <value>
                <fullName>08:15</fullName>
            </value>
            <value>
                <fullName>08:20</fullName>
            </value>
            <value>
                <fullName>08:25</fullName>
            </value>
            <value>
                <fullName>08:30</fullName>
            </value>
            <value>
                <fullName>08:35</fullName>
            </value>
            <value>
                <fullName>08:40</fullName>
            </value>
            <value>
                <fullName>08:45</fullName>
            </value>
            <value>
                <fullName>08:50</fullName>
            </value>
            <value>
                <fullName>08:55</fullName>
            </value>
            <value>
                <fullName>09:00</fullName>
            </value>
            <value>
                <fullName>09:05</fullName>
            </value>
            <value>
                <fullName>09:10</fullName>
            </value>
            <value>
                <fullName>09:15</fullName>
            </value>
            <value>
                <fullName>09:20</fullName>
            </value>
            <value>
                <fullName>09:25</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>