unpackaged/main/default/objects/ETI_Lane_Details__c/fields/ET_Location__c.field-meta.xml
<CustomField>
    <fullName>ET_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <referenceTo>ET_Location__c</referenceTo>
    <relationshipLabel>Lane Details</relationshipLabel>
    <relationshipName>Lane_Details</relationshipName>
    <type>Lookup</type>
</CustomField>