unpackaged/main/default/objects/ETI_Lane_Details__c/fields/Lane_Status__c.field-meta.xml
<CustomField>
    <fullName>Lane_Status__c</fullName>
    <label>Lane Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>In Active</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>