unpackaged/main/default/objects/ETI_Lane_Details__c/fields/Lane_Type_AMAN__c.field-meta.xml
<CustomField>
    <fullName>Lane_Type_AMAN__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Lane Type (AMAN)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>