unpackaged/main/default/objects/ETI_Lane_Details__c/fields/Slot_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Slot_Frequency__c</fullName>
    <label>Slot Frequency</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>05 Minutes</fullName>
            </value>
            <value>
                <fullName>10 Minutes</fullName>
            </value>
            <value>
                <fullName>15 Minutes</fullName>
            </value>
            <value>
                <fullName>20 Minutes</fullName>
            </value>
            <value>
                <fullName>30 Minutes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>