unpackaged/main/default/objects/ETI_Lane_Details__c/fields/To_Date__c.field-meta.xml
<CustomField>
    <fullName>To_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>To Date</label>
    <type>Date</type>
</CustomField>