unpackaged/main/default/objects/ETI_Lane_Details__c/fields/Working_Hours__c.field-meta.xml
<CustomField>
    <fullName>Working_Hours__c</fullName>
    <label>Working Hours</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>8AM - 5PM</fullName>
            </value>
            <value>
                <fullName>9AM - 6PM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>