unpackaged/main/default/objects/ETI_Lane_Details__c/recordTypes/Certificate_Lane.recordType-meta.xml
<RecordType>
    <fullName>Certificate_Lane</fullName>
    <active>true</active>
    <label>Certificate Lane</label>
</RecordType>