unpackaged/main/default/objects/ETI_Lane_Details__c/recordTypes/Police_Inspection_Lane.recordType-meta.xml
<RecordType>
    <fullName>Police_Inspection_Lane</fullName>
    <active>true</active>
    <label>Police Inspection Lane</label>
</RecordType>