unpackaged/main/default/objects/ETI_Lane_Details__c/validationRules/Validate_Out_of_service_lane.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Out_of_service_lane</fullName>
    <active>false</active>
    <errorConditionFormula>AND(NOT(ISNEW()),ISBLANK(From_Date__c), ISBLANK(To_Date__c))</errorConditionFormula>
    <errorMessage>Please Specify From Date and To Date to proceed.</errorMessage>
</ValidationRule>