unpackaged/main/default/objects/ETI_Lane_Details__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Slot_Frequency__c</columns>
    <columns>Lane_Status__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>ETI_Lane_Details__c.Certificate_Lane,ETI_Lane_Details__c.Police_Inspection_Lane</value>
    </filters>
    <label>All</label>
</ListView>