unpackaged/main/default/objects/ETI_Lane_Details__c/listViews/Certificate_Lanes.listView-meta.xml
<ListView>
    <fullName>Certificate_Lanes</fullName>
    <columns>NAME</columns>
    <columns>ET_Location__c</columns>
    <columns>Slot_Frequency__c</columns>
    <columns>Lane_Status__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>ETI_Lane_Details__c.Certificate_Lane</value>
    </filters>
    <label>Certificate Lanes</label>
</ListView>