unpackaged/main/default/objects/ETI_Lane_Details__c/listViews/Police_Inspection_Lanes.listView-meta.xml
<ListView>
    <fullName>Police_Inspection_Lanes</fullName>
    <columns>NAME</columns>
    <columns>Slot_Frequency__c</columns>
    <columns>Lane_Status__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>ETI_Lane_Details__c.Police_Inspection_Lane</value>
    </filters>
    <label>Police Inspection Lanes</label>
</ListView>